Update PurchaseServiceTests.java