@@ -999,11 +999,21 @@ class PurchaseServiceTests {
         when(auth.ValidateToken(token)).thenReturn(uid);
         when(repo.getAllBids()).thenReturn(List.of(done, open));
 
-        when(shops.getclosedShops(token))
+        lenient().when(shops.getclosedShops(token))
                 .thenReturn(List.of(2));  // shop #2 is closed
 
-        when(items.getAllItems(token))
-                .thenReturn(List.of(new Item(100, "", "", 0)));  // item #100 exists globally
+        lenient().when(shops.searchItemsInShop(
+            eq(1),       // the only shop we care about
+            isNull(),    // name
+            isNull(),    // category
+            eq(Collections.emptyList()), // keywords
+            isNull(),    // minPrice
+            isNull(),    // maxPrice
+            isNull(),    // minRating
+            eq(token)    // auth token
+        )).thenReturn(List.of(
+            new Item(100, "", "", 0)  // only item #100 exists in shop #1
+        ));
 
         List<BidReciept> out = service.getAllBids(token, false);
         assertEquals(1, out.size());
@@ -1023,19 +1033,16 @@ class PurchaseServiceTests {
         BidReciept open = mock(BidReciept.class);
 
         when(done.isCompleted()).thenReturn(true);
-        when(done.getUserId())     .thenReturn(uid);
+        when(done.getUserId()).thenReturn(uid);
+        
+        when(open.isCompleted()).thenReturn(false);
+        when(open.getUserId()).thenReturn(uid);
 
-        // spy the service
-        PurchaseService spySvc = spy(service);
+        // Mock the required dependencies for getAllBids
+        when(auth.ValidateToken(token)).thenReturn(uid);
+        when(repo.getAllBids()).thenReturn(List.of(done, open));
 
-        // make these two lenient stubs:
-        lenient().doReturn(List.of(done, open))
-                .when(spySvc).getAllBids(eq(token), eq(true));
-
-        lenient().when(auth.ValidateToken(token))
-                .thenReturn(uid);
-
-        List<BidReciept> out = spySvc.getFinishedBidsList(token);
+        List<BidReciept> out = service.getFinishedBidsList(token);
 
         assertEquals(1, out.size());
         assertSame(done, out.get(0));
